# blind-vote

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wxt.config.ts
.github/: copilot-instructions.md
entrypoints/background/: index.ts
entrypoints/content/: index.tsx
entrypoints/popup/: index.html  main.ts
lib/: subreddit-settings.ts
modules/: wasm-loader.ts
src/entrypoints/content/: index.tsx
src/entrypoints/popup/: index.html  load-wasm.js
wasm/: Cargo.toml
wasm/bv-calc/: Cargo.toml
wasm/bv-collect/: Cargo.toml
wasm/bv-collect/src/: lib.rs
wasm/bv-shared/: Cargo.toml
wasm/bv-shared/src/: lib.rs
wasm/src/: api.rs  lib.rs
